<resources>
    <string name="app_name">从删库到跑路</string>

    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>

    <string name="login_bt_text">登陆</string>
    <string name="register_bt_text">注册</string>

    <string name="user_pass_empty">用户名或密码不能为空哦</string>
    <string name="wrong_username">用户名错误</string>
    <string name="wrong_password">密码错误</string>

    <string name="wrong_request">网络请求错误</string>

    <string name="user_empty">用户名不能为空哦</string>
    <string name="pass_empty">密码不能为空哦</string>
    <string name="pass_wrong_confirm">两次密码不一致</string>
    <string name="nick_empty">昵称不能为空哦</string>

    <string name="login_password_confirm_hint">请再次输入密码</string>
    <string name="nick_hint">请输入昵称</string>
    
    <string name="repeat_user_name">用户名已被使用，请换一个吧</string>
    <string name="repeat_nick">昵称已被使用，请换一个吧</string>

    <string name="register_success">注册成功</string>

    <string name="tab_information">资讯</string>
    <string name="tab_sport">运动</string>
    <string name="tab_mine">我的</string>


</resources>
